对接V2T接口
