# controller/FFmpeg.go
@@ -15,7 +15,7 @@ import (
 // @Produce json
 // @Param task_id path string true "Task ID"
 // @Success 200 {object} map[string]string "{"message": "..."}"
-// @Router /FFmpeg/{task_id} [get]
+// @Router /api/v1/FFmpeg/{task_id} [get]
 func FFmpegHandler(c *gin.Context) {
 	// 调用 FFmpeg 相关功能的代码，返回输出文件路径（位于 ./public/videos）
 	taskID := c.Param("task_id")
